fix message preview and alignment bug

--- a/src/scss/_menuBarComponents/_chatRow.scss
+++ b/src/scss/_menuBarComponents/_chatRow.scss
@@ -16,6 +16,7 @@
     border-radius: 50%;
   }
   .contactInfo {
+    flex: 1;
     padding-left: 5px;
     .friendName {
       font-weight: 500;
